# openapi.yaml
@@ -7619,10 +7619,6 @@ components:
           type: integer
           minimum: 0
           default: 0
-        template_addon:
-          type: integer
-          minimum: 0
-          default: 0
         user_seat_addon:
           type: integer
           minimum: 0
@@ -9129,10 +9125,6 @@ components:
           type: integer
           maximum: 2147483647
           minimum: -2147483648
-        template_addon:
-          type: integer
-          maximum: 2147483647
-          minimum: -2147483648
         user_seat_addon:
           type: integer
           maximum: 2147483647
@@ -9281,15 +9273,10 @@ components:
           type: integer
           maximum: 2147483647
           minimum: -2147483648
-        template:
-          type: integer
-          maximum: 2147483647
-          minimum: -2147483648
       required:
       - credit
       - id
       - name
-      - template
       - user_seat
       description: ''
     PlanSubscription:
@@ -9301,10 +9288,6 @@ components:
           - yearly
           type: string
         credit_addon:
-          type: integer
-          minimum: 0
-          default: 0
-        template_addon:
           type: integer
           minimum: 0
           default: 0
@@ -9351,19 +9334,11 @@ components:
           type: integer
           maximum: 2147483647
           minimum: -2147483648
-        template:
-          type: integer
-          maximum: 2147483647
-          minimum: -2147483648
         user_seat:
           type: integer
           maximum: 2147483647
           minimum: -2147483648
         credit_addon_price:
-          type: number
-          format: float
-          readOnly: true
-        template_addon_price:
           type: number
           format: float
           readOnly: true
@@ -9378,8 +9353,6 @@ components:
       - id
       - name
       - price
-      - template
-      - template_addon_price
       - user_seat
       - user_seat_addon_price
       - version
@@ -9768,26 +9741,16 @@ components:
           type: integer
           maximum: 2147483647
           minimum: -2147483648
-        active_template:
-          type: integer
-          readOnly: true
         active_user:
           type: integer
           readOnly: true
         total_credit:
           type: integer
           readOnly: true
-        total_template:
-          type: integer
-          readOnly: true
         total_user_seat:
           type: integer
           readOnly: true
         credit_addon:
-          type: integer
-          maximum: 2147483647
-          minimum: -2147483648
-        template_addon:
           type: integer
           maximum: 2147483647
           minimum: -2147483648
@@ -9831,7 +9794,6 @@ components:
           format: float
           readOnly: true
       required:
-      - active_template
       - active_user
       - base_plan
       - current_term_end
@@ -9839,7 +9801,6 @@ components:
       - reset_usage_on
       - subscription_price
       - total_credit
-      - total_template
       - total_user_seat
       - trial_end
       - trial_started_on
@@ -9854,10 +9815,6 @@ components:
           type: string
           readOnly: true
         credit_addon:
-          type: integer
-          maximum: 2147483647
-          minimum: -2147483648
-        template_addon:
           type: integer
           maximum: 2147483647
           minimum: -2147483648
@@ -9928,7 +9885,6 @@ components:
       - plan
       - scheduled_on
       - status
-      - template_addon
       - user_seat_addon
       description: ''
     Summary:
