# src/api/models/CartValidation.ts
@@ -5,7 +5,6 @@
 export type CartValidation = {
     billing_term: 'monthly' | 'yearly';
     credit_addon?: number;
-    template_addon?: number;
     user_seat_addon?: number;
 };
 
